[gd_scene load_steps=6 format=3 uid="uid://p2fuew7akfjn"]

[ext_resource type="Script" path="res://UI/player/inventory/ItemSlot.gd" id="1_3jwae"]
[ext_resource type="Theme" uid="uid://da7b4g6cwj08y" path="res://default_theme_big_btn.tres" id="1_vc2yr"]
[ext_resource type="PackedScene" uid="uid://d1jv6n3omnwt8" path="res://UI/player/inventory/item.tscn" id="2_hkol5"]
[ext_resource type="Texture2D" uid="uid://wxxbdmf62x16" path="res://UI/inventory_container.png" id="3_y0xsa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v4tb6"]
texture = ExtResource("3_y0xsa")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="ItemSlot" type="PanelContainer"]
custom_minimum_size = Vector2(40, 40)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_vc2yr")
theme_override_styles/panel = SubResource("StyleBoxTexture_v4tb6")
script = ExtResource("1_3jwae")
item_scene = ExtResource("2_hkol5")

[node name="IconContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
